--- a/storage/storage-service/Cargo.toml
+++ b/storage/storage-service/Cargo.toml
@@ -31,6 +31,7 @@ rand = { version = "0.7.3", optional = true }
 proptest = { version = "0.9.6", optional = true }
 simple-storage-client = { path = "../simple-storage-client", version = "0.1.0", optional = true }
 storage-client = { path = "../storage-client", version = "0.1.0", optional = true }
+move-core-types = { path = "../../language/move-core/types", version = "0.1.0" }
 
 [dev-dependencies]
 itertools = "0.9.0"
